chandeliers-lus/tests/compile_fail/ui/options/pub.stderr
error[E0603]: struct `private` is private
  --> tests/compile_fail/ui/options/pub.rs:23:10
   |
23 | use vis::private;
   |          ^^^^^^^ private struct
   |
note: the struct `private` is defined here
  --> tests/compile_fail/ui/options/pub.rs:8:14
   |
8  |         node private() returns ();
   |              ^^^^^^^

error[E0603]: constant `PRIVATE` is private
  --> tests/compile_fail/ui/options/pub.rs:24:10
   |
24 | use vis::PRIVATE;
   |          ^^^^^^^ private constant
   |
note: the constant `PRIVATE` is defined here
  --> tests/compile_fail/ui/options/pub.rs:12:15
   |
12 |         const PRIVATE: int = 0;
   |               ^^^^^^^
